2016-12-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Version bump to 2.5.3

	* configure.ac: bump the version string to 2.5.3

2016-11-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Correct alignment of recipient labels.

	* src/sendmsg-window.h: remove redundant GtkSizeGroup;
	* src/sendmsg-window.c (create_email_or_string_entry),
	(create_info_pane), (sw_attachment_list): do not use it.

2016-11-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/misc.c (libbalsa_font_string_to_css): make new CSS
	parsing conditional on gtk version 3.22.

2016-11-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Adapt to new recipient strings

	* src/sendmsg-window.c (update_bsmsg_identity),
	(setup_headers_from_message), (setup_headers_from_identity),
	(set_cc_from_all_recipients), (sendmsg_window_set_field),
	(bsmsg2message), (check_suggest_encryption):

2016-11-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Save the correct window geometry

	* libbalsa/source-viewer.c (lsv_size_allocate_cb): save the window
	  geometry from gtk_window_get_size instead of the GtkAllocation.
	* src/balsa-mblist.c (bmbl_mru_size_allocate_cb): ditto.
	* src/message-window.c (size_alloc_cb): ditto.
	* src/sendmsg-window.c (sw_size_alloc_cb): ditto.
	* src/main-window.c (bw_window_state_event_cb): simplify the
	  code.

2016-11-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Disable accelerated compositing in webkit2, to avoid some gdk
	warnings; see thread at
	https://lists.webkit.org/pipermail/webkit-gtk/2016-November/002863.html

	* src/main.c (main): set WEBKIT_DISABLE_COMPOSITING_MODE
	environment variable.

2016-11-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Save the main window state more carefully

	* src/main-window.c (bw_window_state_event_cb): note when the
	main window is either maximized or fullscreen, and save the
	information as TRUE or FALSE.

2016-11-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Save the correct window geometry
