@@ -1,3 +1,10 @@
+2016-12-10  Pawel Salek <pawsa0@gmail.com>
+
+	* Makefile.am: do not include mkinstalldirs any more
+	* libbalsa/imap/auth-cram.c:
+	* libbalsa/imap/pop3.c:  fix regression in CRAM-MD5 code; build against
+	openssl-1.1.0
+
 2016-12-09  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	Version bump to 2.5.3
